syntax = "proto3";

import "DTO/replay_ticket.proto";
import "DTO/trace_data.proto";

option csharp_namespace = "Proto.Requests.TicketReplay";


message GetReplayResponseProto {
  repeated TicketReplayProto ticket_replays = 1;
}

message GetTicketReplaysByIdRequestProto {
  string ticket_id = 1;
  TraceDataProto traceData = 2;
}

service TicketReplayRequestService {
  rpc GetReplayData(GetTicketReplaysByIdRequestProto) returns (GetReplayResponseProto);
}
